# wardex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.claude/: audit-trail.jsonl  settings.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI_DESIGN.md  PREVIEW.md  ctf-lifecycle.md  shell-output-contracts.md
docs/plan/: README.md  ctf-shell-plan.md  evaluation-alpha3.md  long-term-strategy.md  review.md  roadmap.md  task-list.md  workstreams.md
docs/rfcs/: 0000-template.md  0001-ctf-shell-first.md  0002-shell-completions.md  README.md
docs/superpowers/plans/: 2026-04-10-beta-roadmap.md
docs/superpowers/specs/: 2026-04-10-beta-roadmap-design.md
nix/: hm-module.nix
src/: config.rs  lib.rs  main.rs  output.rs
src/core/: mod.rs  state.rs  templates.rs
src/engine/: ctf.rs  search.rs  stats.rs  undo.rs
src/engine/ctf/: archive.rs  challenge.rs  completions.rs  event.rs  import.rs  mod.rs  resolve.rs  shelve.rs
src/utils/: fs.rs
tests/: cli_integration.rs
