[package]
name = "wardex"
version = "0.2.0-alpha6"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config (layered with env var support)
config = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# File system
fs_extra = "1.3"
dirs = "6.0"

# Search (ripgrep libraries)
grep-regex = "0.1"
grep-searcher = "0.1"
regex = "1.12"

# Git
git2 = { version = "0.20", default-features = false }

# File watching
notify = "8.0"
notify-debouncer-mini = "0.7"

# Archive handling
zip = "7.1"
tar = "0.4"
flate2 = "1.1"

# Utilities
anyhow = "1.0"
chrono = "0.4"
rayon = "1.11"
tabled = { version = "0.20", features = ["ansi"] }
infer = "0.19"
fuzzy-matcher = "0.3.7"
dialoguer = "0.11"
ignore = "0.4.25"
fs-err = "3.2.2"
ratatui = { version = "0.30.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
clap_complete = "4.6.0"

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]

[dev-dependencies]
tempfile = "3.24"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"
